# capital-markets-peer-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_analysis.py  streamlit_app.py
sample_outputs/: README.md  dashboard_report.html  executive_summary.md  recruiter_case_study.md
src/ib_showcase/: __init__.py  analytics.py  charts.py  config.py  data_fetcher.py  dcf.py  pipeline.py  reporting.py  sec_data.py
templates/: dcf_assumptions_template.csv  recruiter_walkthrough_template.md
tests/: test_analytics.py  test_dcf.py
