[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-recruiting-portfolio"
version = "0.1.0"
description = "A free-data Python project for investment banking style peer benchmarking and market analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "yfinance>=0.2.54",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "XlsxWriter>=3.2.0",
    "plotly>=5.24.0",
    "streamlit>=1.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
